manifests/oil-monitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-live
  labels:
    app.kubernetes.io/name: oil-monitor
  name: oil-monitor
  namespace: oil-monitor
spec:
  ingressClassName: traefik
  rules:
  - host: oil.tanzu.blah.cloud
    http:
      paths:
      - backend:
          service:
            name: oil-monitor
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
      - oil.tanzu.blah.cloud
    secretName: oil-monitor-cert
